Changes for version 1.5.27 - Localized Call Hierarchy view tooltip texts and removed related compatibility issue with Eclipse 3.5 - updated with JTB 1.4.7 - managed new column numbers in JTB messages - managed multiple messages on the same line in editors - upgraded the internal JTB grammar and the syntax coloring to handle the JTB 1.4.7 new '!' syntax for not generating a node creation<p>